--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="row">
+  <div class="large-12 columns">
+    <div class="panel radius">
 
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= f.error_notification %>
+			<h2>Forgot your password?</h2>
 
-  <div class="inputs">
-    <%= f.input :email, :required => true %>
+			<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+			  <%= f.error_notification %>
+
+			  <div class="inputs">
+			    <%= f.input :email, :required => true %>
+			  </div>
+
+			  <div class="actions">
+			    <%= f.button :submit, "Send me reset password instructions", :class=>"button  round" %> 
+			  </div>
+			<% end %>
+
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render :partial => "devise/shared/links" %>
+</div>
