--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="row">
+	<div class="large-12 columns">
+		<h1>Reports</h1>
+		<p>Find me in app/views/home/index.html.erb</p>
+	</div>
+</div>
