update layout and routes, added reports controller and views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,9 @@
 
   <body>
 
-    <%= yield %>
+    <div class="main-container">
+      <%= yield %>
+    </div>
 
     
     <%= javascript_include_tag "application" %>
