updated registrations to change default user type, add report decorator, added header and footer partials for layout, added user_type field via migration

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,12 +21,13 @@
   </head>
 
   <body>
-
+    <%= render 'layouts/header' %>
     <div class="main-container">
       <%= yield %>
     </div>
 
     
     <%= javascript_include_tag "application" %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
