--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,11 +7,11 @@
 		  <%= f.error_notification %>
 
 		  <div class="inputs">
-		    <%= f.input :first_name, :required => true%>
+		    <%= f.input :first_name%>
 		    <%= f.input :last_name, :required => true%>
 		    <%= f.input :email, :required => true, :autofocus => true %>
 		    <%= f.input :password, :required => true %>
-		    <%= f.input :user_type, :required => true, :as=>:hidden, :value=>"customer",:input_html=>{:value=>"customer"} %>
+		    <%= f.input :user_type, :required => true, :as=>:hidden, :value=>"subscriber",:input_html=>{:value=>"subscriber"} %>
 		    <%= f.input :password_confirmation, :required => true %>
 		  </div>
 
